Z-index fix for modal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ jw-modal {
     left: 0;
 
     /* z-index must be higher than .jw-modal-background */
-    z-index: 1000;
+    z-index: 900;
 
     /* enables scrolling for tall modals */
     overflow: auto;
@@ -51,7 +51,7 @@ jw-modal {
     opacity: 0.75;
 
     /* z-index must be below .jw-modal and above everything else  */
-    z-index: 900;
+    z-index: 800;
   }
 }
 
